CHANGES.txt - 2.0b1 - 2013-08-06
--------------------------------

CHANGES IN CUPS V2.0b1
